--- a/HorseLamenessTracking/trackingpage.ui
+++ b/HorseLamenessTracking/trackingpage.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1113</width>
-    <height>677</height>
+    <width>985</width>
+    <height>527</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
     </rect>
    </property>
    <property name="title">
-    <string>GroupBox</string>
+    <string>Video Streams</string>
    </property>
    <widget class="QOpenGLWidget" name="openGLWidget">
     <property name="geometry">
@@ -69,11 +69,18 @@
   <widget class="QPushButton" name="btnStart">
    <property name="geometry">
     <rect>
-     <x>720</x>
-     <y>40</y>
+     <x>710</x>
+     <y>60</y>
      <width>250</width>
      <height>100</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>26</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
    </property>
    <property name="text">
     <string>Start</string>
@@ -82,11 +89,18 @@
   <widget class="QPushButton" name="btnStop">
    <property name="geometry">
     <rect>
-     <x>720</x>
-     <y>150</y>
+     <x>710</x>
+     <y>170</y>
      <width>250</width>
      <height>100</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>26</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
    </property>
    <property name="text">
     <string>Stop</string>
@@ -95,11 +109,18 @@
   <widget class="QPushButton" name="btnCalibrate">
    <property name="geometry">
     <rect>
-     <x>720</x>
-     <y>260</y>
+     <x>710</x>
+     <y>280</y>
      <width>250</width>
      <height>100</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>26</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
    </property>
    <property name="text">
     <string>Calibrate</string>
@@ -108,11 +129,18 @@
   <widget class="QPushButton" name="btnBack">
    <property name="geometry">
     <rect>
-     <x>720</x>
-     <y>370</y>
+     <x>710</x>
+     <y>390</y>
      <width>250</width>
      <height>100</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>26</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
    </property>
    <property name="text">
     <string>Back</string>
