--- a/HorseLamenessTracking/configurationpage.ui
+++ b/HorseLamenessTracking/configurationpage.ui
@@ -26,7 +26,7 @@
     <string>Finish</string>
    </property>
   </widget>
-  <widget class="QSlider" name="horizontalSlider">
+  <widget class="QSlider" name="horizontalSliderHMax">
    <property name="geometry">
     <rect>
      <x>879</x>
@@ -39,7 +39,7 @@
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
-  <widget class="QSlider" name="horizontalSlider_2">
+  <widget class="QSlider" name="horizontalSliderHMin">
    <property name="geometry">
     <rect>
      <x>880</x>
@@ -52,7 +52,7 @@
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
-  <widget class="QSlider" name="horizontalSlider_3">
+  <widget class="QSlider" name="horizontalSliderSMin">
    <property name="geometry">
     <rect>
      <x>880</x>
@@ -65,7 +65,7 @@
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
-  <widget class="QSlider" name="horizontalSlider_4">
+  <widget class="QSlider" name="horizontalSliderVMin">
    <property name="geometry">
     <rect>
      <x>880</x>
@@ -78,7 +78,7 @@
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
-  <widget class="QSlider" name="horizontalSlider_5">
+  <widget class="QSlider" name="horizontalSliderVMax">
    <property name="geometry">
     <rect>
      <x>880</x>
@@ -91,7 +91,7 @@
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
-  <widget class="QSlider" name="horizontalSlider_6">
+  <widget class="QSlider" name="horizontalSliderSMax">
    <property name="geometry">
     <rect>
      <x>880</x>
