--- a/HorseLamenessTracking/homewindow.ui
+++ b/HorseLamenessTracking/homewindow.ui
@@ -26,7 +26,7 @@
     <property name="title">
      <string>Video Streams</string>
     </property>
-    <widget class="QOpenGLWidget" name="openGLWidget">
+    <widget class="QGraphicsView" name="graphicsViewCameraOne">
      <property name="geometry">
       <rect>
        <x>20</x>
@@ -36,31 +36,31 @@
       </rect>
      </property>
     </widget>
-    <widget class="QOpenGLWidget" name="openGLWidget_3">
+    <widget class="QGraphicsView" name="graphicsViewCameraTwo">
      <property name="geometry">
       <rect>
-       <x>470</x>
+       <x>460</x>
        <y>40</y>
        <width>421</width>
        <height>291</height>
       </rect>
      </property>
     </widget>
-    <widget class="QOpenGLWidget" name="openGLWidget_4">
+    <widget class="QGraphicsView" name="graphicsViewCameraThree">
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>340</y>
+       <y>350</y>
        <width>421</width>
        <height>291</height>
       </rect>
      </property>
     </widget>
-    <widget class="QOpenGLWidget" name="openGLWidget_2">
+    <widget class="QGraphicsView" name="graphicsViewCameraFour">
      <property name="geometry">
       <rect>
-       <x>470</x>
-       <y>340</y>
+       <x>460</x>
+       <y>350</y>
        <width>421</width>
        <height>291</height>
       </rect>
