--- a/HorseLamenessTracking/trackingpage.ui
+++ b/HorseLamenessTracking/trackingpage.ui
@@ -25,43 +25,43 @@
    <property name="title">
     <string>Video Streams</string>
    </property>
-   <widget class="QOpenGLWidget" name="openGLWidget">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>50</y>
-      <width>300</width>
-      <height>200</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QOpenGLWidget" name="openGLWidget_2">
+   <widget class="QGraphicsView" name="graphicsViewCameraTwo">
     <property name="geometry">
      <rect>
       <x>350</x>
       <y>50</y>
-      <width>300</width>
-      <height>200</height>
+      <width>301</width>
+      <height>201</height>
      </rect>
     </property>
    </widget>
-   <widget class="QOpenGLWidget" name="openGLWidget_3">
+   <widget class="QGraphicsView" name="graphicsViewCameraOne">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>50</y>
+      <width>301</width>
+      <height>201</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QGraphicsView" name="graphicsViewCameraThree">
     <property name="geometry">
      <rect>
       <x>30</x>
       <y>270</y>
-      <width>300</width>
-      <height>200</height>
+      <width>301</width>
+      <height>201</height>
      </rect>
     </property>
    </widget>
-   <widget class="QOpenGLWidget" name="openGLWidget_4">
+   <widget class="QGraphicsView" name="graphicsViewCameraFour">
     <property name="geometry">
      <rect>
       <x>350</x>
       <y>270</y>
-      <width>300</width>
-      <height>200</height>
+      <width>301</width>
+      <height>201</height>
      </rect>
     </property>
    </widget>
